# eh-bench

./: .gitignore  LICENSE.md  README.md  clobber.cpp  eh_bench.cpp  exception.cpp  fae-toolchain.ini  fae_results.md  functions.h  gen_functions.py  generate.py  main.cpp  meson.build  no_error.cpp  result.cpp  script.ld  timing.cpp  trivial.cpp
results/: custom-linux-results.txt  fae-results.txt  linux-results.txt  x86-linux-gcc.txt  x86-msvc.txt
